--- a/docs/de-de/modules/daten/pages/einrichtung-verwendung.adoc
+++ b/docs/de-de/modules/daten/pages/einrichtung-verwendung.adoc
@@ -78,7 +78,7 @@ Der elastische Export ist ein Plugin.
 Lade das Plugin herunter und installiere es in deinem plentymarkets System.
 
 * link:https://marketplace.plentymarkets.com/plugins/channels/marktplaetze/elasticexport_4763[Download-Link^]
-* xref:plugins:partial$hinzugefuegte-plugins-installieren.adoc#[Wie werden Plugins installiert?]
+* xref:plugins:page$hinzugefuegte-plugins-installieren.adoc#[Wie werden Plugins installiert?]
 
 [#300]
 === Plugins für Marktplätze
