--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -89,7 +89,7 @@ material:tune[]
 | Erstelle einen neuen Katalog.
 
 | material:content_copy[]
-| Kopiere einen oder mehrere Kataloge, die du in der ersten Spalte der Liste gewählt hast. (xref:page:catalogues-manage.adoc#190[Wie?])
+| Kopiere einen oder mehrere Kataloge, die du in der ersten Spalte der Liste gewählt hast. (xref:daten:catalogues-manage.adoc#190[Wie?])
 
 | material:file_download[]
 | Exportiere einen oder mehrere Kataloge, die du in der ersten Spalte der Liste gewählt hast. (xref:daten:catalogues-manage.adoc#270[Wie?]) +
