--- a/docs/en-gb/modules/data/pages/deprecated-tools-item.adoc
+++ b/docs/en-gb/modules/data/pages/deprecated-tools-item.adoc
@@ -240,7 +240,7 @@ Make sure that you spell the name of the manufacturer correctly when using this 
 |
 
 | **ItemShippingWithAmazonFBA**
-|xref:markets:amazon-fba.html#3700[Amazon Multi-Channel] +
+|xref:markets:amazon-fba.adoc#3700[Amazon Multi-Channel] +
 **1** = Yes +
 **0** = No
 |
