--- a/docs/en-gb/modules/markets/pages/amazon-fba.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fba.adoc
@@ -383,7 +383,7 @@ Activating the variation availability for Amazon Multi-Channel:
 . Go to *Item » Edit item*.
 . Open the item.
 . Click on the *Multi-Channel* tab.
-. Carry out the settings in the *Amazon* area. Pay attention to the explanations given in the chapter xref:markets:preparing-variations.html#700[Setting the variation availability].
+. Carry out the settings in the *Amazon* area. Pay attention to the explanations given in the chapter xref:markets:preparing-variations.adoc#700[Setting the variation availability].
 . Save (terra:save[]) the settings.
 
 [#4000]
