--- a/docs/en-gb/modules/markets/pages/ebay-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/ebay-setup.adoc
@@ -1721,7 +1721,7 @@ If the *Wildcard character in layout template (eBay)* function is activated, the
 
 Use cross-selling to offer further products related to an item. These products are displayed at your listing on eBay. +
 
-Use the template function *GetCrossSellingData* to add xref:item:cross-selling.html#[cross-selling items] that are linked to an item to a <<Managing layout templates, layout template>> and <<Linking a layout template, link>> this layout template to the desired listings. Add cross-selling items to layout templates in the *Setup » Listings » Layout* menu.
+Use the template function *GetCrossSellingData* to add xref:item:cross-selling.adoc#[cross-selling items] that are linked to an item to a <<Managing layout templates, layout template>> and <<Linking a layout template, link>> this layout template to the desired listings. Add cross-selling items to layout templates in the *Setup » Listings » Layout* menu.
 The template function *GetCrossSellingData* displays the following data which can be displayed at a cross-selling item:
 
  * *Item ID* of the item in plentymarkets
