--- a/docs/en-gb/modules/markets/partials/zalando-faq.adoc
+++ b/docs/en-gb/modules/markets/partials/zalando-faq.adoc
@@ -16,7 +16,7 @@ Contact us in the link:https://forum.plentymarkets.com/t/sammelthema-collective-
     * User name and password
     * Login details for the plentymarkets FTP server for silhouettes
     *_Note:_* Zalando sends your silhouettes to this FTP server so that they can be imported into your plentymarkets system. plentymarkets imports these silhouettes every Wednesday.
-    
+
 Forward the completed form to your Zalando contact. +
 Complete the assistant *Account settings - Zalando* in your plentymarkets system. +
 <<#setup, Set up>> the interface to Zalando in your plentymarkets system. +
@@ -64,7 +64,7 @@ The mandatory fields for Zalando are listed below:
     * Herstellerfarbe (manufacturer colour)
     * Jahreszeiten-Code (seasonal code)
     * Silhouetten-Typ (silhouette type)
-    
+
 To check whether there are errors for your variations, you can take a look at the reports listed below. Depending on the report, you can check your variations for errors.
 --
 
@@ -129,7 +129,7 @@ The characteristic *Zalando » Größen-Register* (size register) is missing or 
     The characteristic has to be added and linked to the appropriate size register.
     * _Scenario 2:_ The characteristic was created. +
     Keep in mind to comply with the format provided by Zalando. Check if the size register is correct.
-    
+
 *_Note:_* Size registers that were created manually cannot be used for Zalando.
 --
 
@@ -309,9 +309,9 @@ Settings for stock export are carried out when first setting up Zalando with the
 .How can I update the stock again for all variations?
 --
 To export stock again to Zalando, the stock synchronisation must be triggered. You can use the assistant *Account settings - Zalando* to do so. You only have to make a change  in the *Stock for Germany* and/or *Stock for Austria* section. It doesn’t matter which change you make. You can revert the change afterwards. The stock will be exported to Zalando within 15 minutes afterwards. +
-You can check the export of prices in the log. Also see <<#stock-synchronisation, How can I check stock updates?>>. +
+You can check the export of prices in the log. Also see <<#stock-update, How can I check whether stock was exported?>>. +
 Note that the export may be delayed if you transfer a lot of variations to different sales channels. This is due to the limitation of API calls set by Zalando. It can happen that data is exported in several packages, and therefore the export takes longer. Variations of one and the same item might also be exported in different packages. Each package contains up to 1000 variations, which make up one request. 20 requests can be sent per minute. Different packages can be distinguished by the *jobId*. +
-Also see <<#stock-synchronisation, How can I check stock updates?>>.
+Also see <<#stock-update, How can I check whether stock was exported?>>.
 --
 
 [#faq-order-processing]
@@ -334,9 +334,9 @@ Use the following filters:
     * *Integration*: Plenty\\Modules\\Zalando\\Orders\\Procedures\\OrderShippingProcedure
     * *Identifier*: Zalando
     * *Level*: error
-    
+
 You can also additionally use the order ID or the external order ID as filter, if required.
-    
+
     * *Reference type*: orderId / externalOrderId
     * *Reference value*: your order ID / your external order ID
 --
@@ -373,7 +373,7 @@ Then the reason might be that
 
     * either Zalando has not yet sent any silhouettes for you _or_
     * plentymarkets has not yet imported your silhouettes.
-    
+
 If you already have silhouettes in your plentymarkets system and you want to convert them into characteristics, the backend looks like this:
 
 image::markets:zalando-faq-converting-silhouettes.png[]
