--- a/docs/en-gb/modules/data/pages/import-introduction.adoc
+++ b/docs/en-gb/modules/data/pages/import-introduction.adoc
@@ -65,4 +65,4 @@ video::322745747[vimeo]
 
 == Ready?
 
-TIP: Great. xref:data:elasticsync.adoc#[Then create your first import.]
+TIP: Great. xref:data:ElasticSync.adoc#[Then create your first import.]
