--- a/docs/en-gb/modules/data/pages/setup-use.adoc
+++ b/docs/en-gb/modules/data/pages/setup-use.adoc
@@ -1187,7 +1187,7 @@ Activate or deactivate column names in the new window.
 ==== Toolbar
 
 .An export’s toolbar
-image::daten:elastischer-export-symbolleiste.png[]
+image::data:elastischer-export-symbolleiste.png[]
 
 [cols="1,3"]
 |====
