--- a/docs/en-gb/modules/markets/pages/markets.adoc
+++ b/docs/en-gb/modules/markets/pages/markets.adoc
@@ -57,7 +57,7 @@ In addition, further plugins from third-party providers are available in the ple
 
 [.logoList]
 //  Markt: myToys
-* xref:markets:mytoys.adoc#[image:maerkte:mytoys-logo.png[]]
+* xref:markets:mytoys.adoc#[image:markets:mytoys-logo.png[]]
 //  Market: neckermann
 * xref:markets:neckermann-at-setup.adoc#[image:markets:NeckermannLogo.jpg[]]
 //  Market: Netto
@@ -73,7 +73,7 @@ In addition, further plugins from third-party providers are available in the ple
 //  Market: wish.com
 * link:https://marketplace.plentymarkets.com/en/plugins/channels/marktplaetze/wish_5866[image:markets:wish-logo.png[]]
 //  Market: Voelkner
-* xref:markets:voelkner.adoc#[image:markets:voelker-logo.jpg[]]
+* xref:markets:voelkner.adoc#[image:markets:voelkner-logo.jpg[]]
 
 [.logoList]
 //  Market: yatego
@@ -109,4 +109,4 @@ Many price search engines are available in the link:https://marketplace.plentyma
 … and many more!
 
 //  Markt: limango
-// * xref:maerkte:limango.adoc#[image:markets:limango_logo.png[]]
+// * xref:markets:limango.adoc#[image:markets:limango_logo.png[]]
