--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -655,7 +655,7 @@ To ensure this, carry out the steps described in this chapter:
 [.collapseBox]
 .*_Layout:_* This is how a myToys delivery note should look
 --
-image::maerkte:mytoys-lieferschein-20220303.png[]
+image::markets:mytoys-delivery-note-20220303.png[]
 --
 
 [#1300]
@@ -789,7 +789,7 @@ To ensure this, carry out the steps described in this chapter:
 [.collapseBox]
 .*_Layout:_* This is how a myToys return slip should look
 --
-image::maerkte:myToys-retourenschein-20220303.png[]
+image::markets:myToys-return-20220303.png[]
 --
 
 [#1150]
