--- a/docs/en-gb/modules/data/pages/ebaypartsfitment.adoc
+++ b/docs/en-gb/modules/data/pages/ebaypartsfitment.adoc
@@ -248,7 +248,7 @@ __Table 3: data fields of the data format *EbayPartsFitmentCOM*__
 
 == Overview of the synchronisation fields
 
-The data fields that are listed in table 4 are available for xref:data:importing-data.adoc#25[data synchronisation] for all three data formats. For mandatory synchronisation fields, select the option *Synchronisation* as *Import procedure*. Mandatory synchronisation fields are marked with an *M*.
+The data fields that are listed in table 4 are available for data synchronisation for all three data formats. For mandatory synchronisation fields, select the option *Synchronisation* as *Import procedure*. Mandatory synchronisation fields are marked with an *M*.
 
 [cols="1,3,3"]
 |====
