prepare eol entries

--- a/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
@@ -16,6 +16,12 @@ Diese Übersicht ersetzt nicht den Changelog oder den in der jeweiligen Kategori
 |====
 |Bereich/Funktion |Beendigung der Softwarepflege |Beendigung der Bereitstellungfootnote:[Datum, ab wann die Funktion nicht mehr verfügbar ist] |Weitere Informationen |Datum der Bekanntgabe
 
+|[#intable-app]*plentymarkets App* 
+|- 
+|Geräte mit Android-Betriebssystem kleiner als Version 6.0 ab Mitte Oktober 2022 nicht mehr unterstützt 
+|Information im Forum folgt in Kürze!
+|19.08.2022
+
 |*CRM » Kontakte (veraltet)* (alte UI)
 |03.05.2022
 |schrittweise ab 03.05.2022
