--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -16,6 +16,12 @@ This overview does not replace the changelog or the forum thread within a partic
 |====
 |Area/function |End of software maintenance |End of provisioningfootnote:[Date from which the function is no longer available] |Further information |Announcement date
 
+|[#intable-app]*plentymarkets App* 
+|- 
+|Support for devices with Android OS versions lower than 6.0 will end in Mid-October 2022
+|More information coming soon!
+|19-Aug-2022
+
 |*CRM » Contacts (deprecated)* (old UI)
 |03-May-2022
 |starting on 03-May-2022 (successive removal)
