Denise/eol update (#972)
* prepare eol entries

* move past eol dates DE + EN

--- a/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
@@ -16,6 +16,12 @@ Diese Übersicht ersetzt nicht den Changelog oder den in der jeweiligen Kategori
 |====
 |Bereich/Funktion |Beendigung der Softwarepflege |Beendigung der Bereitstellungfootnote:[Datum, ab wann die Funktion nicht mehr verfügbar ist] |Weitere Informationen |Datum der Bekanntgabe
 
+|[#intable-app]*plentymarkets App* 
+|- 
+|Geräte mit Android-Betriebssystem kleiner als Version 6.0 ab Mitte Oktober 2022 nicht mehr unterstützt 
+|Information im Forum folgt in Kürze!
+|19.08.2022
+
 |*CRM » Kontakte (veraltet)* (alte UI)
 |03.05.2022
 |schrittweise ab 03.05.2022
@@ -27,18 +33,6 @@ Diese Übersicht ersetzt nicht den Changelog oder den in der jeweiligen Kategori
 |unbestimmt
 |link:https://forum.plentymarkets.com/t/ftp-end-of-life-announcement-unknown-date/675956/37[Link zum Forum^]
 |02.06.2022
-
-|Menü *plentymarkets Logo (Start) » Boards*
-|13.04.2022
-|schrittweise ab 13.04.2022
-|link:https://forum.plentymarkets.com/t/ankuendigung-eol-boards-announcement-eol-boards/676479[Link zum Forum^]
-|07.04.2022
-
-| Menü *Aufträge » Zahlungsverkehr [Veraltet]*
-|06.07.2022
-|06.07.2022
-|link:https://forum.plentymarkets.com/t/ankuendigung-abschaltung-alte-benutzeroberflaeche-zahlungsverkehr-announcement-abandonment-of-old-user-interface-payments/655278[Link zum Forum^]
-|07.04.2022
 
 | *Shopwareconnector PSC7 (Arvatis)*
 |01.01.2020
@@ -56,6 +50,18 @@ Diese Übersicht ersetzt nicht den Changelog oder den in der jeweiligen Kategori
 [cols="3,1,1,1,1"]
 |====
 |Bereich/Funktion |Beendigung der Softwarepflege |Beendigung der Bereitstellungfootnote:[Datum, ab wann die Funktion nicht mehr verfügbar ist] |Weitere Informationen |Datum der Bekanntgabe
+
+|Menü *plentymarkets Logo (Start) » Boards*
+|13.04.2022
+|schrittweise ab 13.04.2022
+|link:https://forum.plentymarkets.com/t/ankuendigung-eol-boards-announcement-eol-boards/676479[Link zum Forum^]
+|07.04.2022
+
+| Menü *Aufträge » Zahlungsverkehr [Veraltet]*
+|06.07.2022
+|06.07.2022
+|link:https://forum.plentymarkets.com/t/ankuendigung-abschaltung-alte-benutzeroberflaeche-zahlungsverkehr-announcement-abandonment-of-old-user-interface-payments/655278[Link zum Forum^]
+|07.04.2022
 
 | *Alte Property-Schnittstellen*
 |31.03.2022
